# astronet

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  check-manifest.yml  flake8.yml  pytest.yml  tensorflow.yml  test.yml  tutorials.yml  update-readme-results.yml
astronet/: __init__.py  constants.py  custom_callbacks.py  datasets.py  dutils.py  evaluate.py  fetch_models.py  get_models.py  metrics.py  preprocess.py  train.py  utils.py  visualise_data.py  visualise_results.py
astronet/atx/: layers.py  model.py  train.py
astronet/snX/: layers.py  model.py  train.py
astronet/t2/: attention.py  cams.py  constants.py  evaluate.py  funcmodel.py  metrics.py  model.py  multihead_attention.py  optimise.py  preprocess.py  tinho  tinho.py  train.py  transformer.py  utils.py  visualise_data.py  visualise_results.py  visuals.py
astronet/tests/: README.md  conftest.py
astronet/tinho/: compress.py  funcmodel.py  layers.py  lite.py  prune.py  tinho.py  tinho.sh
astronet/viz/: generate_plots.py  visualise_data.py  visualise_results.py
conf/: astronet.conf
data/: AUSLAN.encoding  ArabicDigits.encoding  CharacterTrajectories.encoding  ECG.encoding  JapaneseVowels.encoding  Libras.encoding  NetFlow.encoding  UWave.encoding  avocado-plasticc.encoding  original-plasticc.encoding  wisdm_2010.encoding
data/plasticc/: aug_object_list.txt  train_subset.txt
data/ztf/: alerts.parquet
libexec/: README.md
notebooks/: CAMs-Copy1.ipynb  CAMs.ipynb  Evaluation-Results-Compare-MTS-atx.ipynb  Evaluation-Results-Compare-MTS-snx.ipynb  Evaluation-Results-Compare-MTS-t2.ipynb  Evaluation-Results-Individual.ipynb  Evaluation-Results-PLAsTiCC-snx.ipynb  Evaluation-Results-PLAsTiCC-t2-Balanced.ipynb  Evaluation-Results-PLAsTiCC-t2-Z-Augmented.ipynb  Evaluation-Results-PLAsTiCC-t2-Z-Balanced.ipynb  Evaluation-Results-PLAsTiCC-t2-Z-Full-Test-Avocado-Augmentation.ipynb  Evaluation-Results-PLAsTiCC-t2-Z-Full-Test.ipynb  Evaluation-Results-PLAsTiCC-t2-Z-Full.ipynb  Evaluation-Results-PLAsTiCC-t2-Z.ipynb  Evaluation-Results-PLAsTiCC-t2.ipynb  Evaluation-Results.ipynb  Explainability-of-Attention-Mechanisms-in-t2-No-Z-FC.ipynb  Explainability-of-Attention-Mechanisms-in-t2-Z.ipynb  Explainability-of-Attention-Mechanisms-in-t2-with-Z-FC-Augmented.ipynb  Explainability-of-Attention-Mechanisms-in-t2.ipynb  GP-Interpolation-Transient-Only-PLAsTiCC-Full.ipynb  GP-Interpolation-Transient-Only-PLAsTiCC.ipynb  GPFlow-Scratchpad-Copy1.ipynb  GPFlow-Scratchpad.ipynb  Hyperparameter-Optimisation-with-HParams.ipynb  Hyperparameter-Optimisation-with-Optuna-WISDM.ipynb  Hyperparameter-Optimisation-with-Optuna.ipynb  Implementing-Time-Transformer.ipynb  MTS-Benchmark-Combined-Results.ipynb  README.md  T2-Mini-Analysis-Pipeline-Copy1.ipynb  T2-Mini-Analysis-Pipeline.ipynb  Time-Transformer-PoC.ipynb  Time-Transformer.ipynb  atx-parameter-count.ipynb  atx-paramter-count.ipynb  fink_science_benchmark.ipynb
notebooks/cams/: make-gifs.sh
resources/: README.md
results/: mts-atx-results-acc.csv  mts-atx-results-precision.csv  mts-atx-results-recall.csv  mts-atx-results.csv  mts-combined-results-acc.md  mts-combined-results-accuracy.md  mts-combined-results-accuracy.tex  mts-combined-results-precision.md  mts-combined-results-precision.tex  mts-combined-results-recall.md  mts-combined-results-recall.tex  mts-combined-results.md  mts-fawaz-results.csv  mts-results-accuracy.csv  mts-results-precision.csv  mts-results-recall.csv  mts-snX-results.csv  mts-t2-combined-results.md  mts-t2-results-acc.csv  mts-t2-results-precision.csv  mts-t2-results-recall.csv  mts-t2-results.csv
sbin/: README.md  augmentation  avocado-training-set  avocado_training_set.py  build.py  chunk-plasticc-test  chunk_plasticc_test.py  compare-mts-atx.py  compare-mts.py  create-full-plasticc  evaluate-on-plasticc-test-set  evaluate-on-plasticc-test-set-locally  evaluate_on_plasticc_test_set.py  make_full_avo_numpy_files.py  make_full_test_numpy_files.py  multigpu-test.py  plasticc-test-set  plasticc-test-set.py  plasticc_test_set.py  slurm-test  slurm_test.py  split-X-full-save-X-test  split_X_full_save_X_test.py  split_processed_plasticc_test_set.py  t2-mwe-ztf.py  t2-mwe-ztf.py.lprof  tests_t2  update-readme-results  virtual-gpus-test
sbin/lnprof/: t2-mwe-ztf.py  (+14 more)
t2/: model.py  train.py  transformer.py  utils.py
(+1396 files in other folders)
